# magazine-ocr

./: .gitignore  README.md  pyproject.toml
annotations/: IMG_8795.json  IMG_8796.json  IMG_8797.json  IMG_8798.json  IMG_8799.json
annotations/auto/: IMG_8795.json  IMG_8796.json  IMG_8797.json  IMG_8798.json  IMG_8799.json
docs/: architecture.md  checklist.md  context.md  plan.md  test-plan.md  todo.md  workflow.md
scripts/: claude_read.py  crop_rows.py  debug_rows.py  export_records.py
src/magazine_ocr/: cli.py  constants.py  extract.py  layout.py  pipeline.py  reconcile.py  report.py  schemas.py
